# programmieren_2_aufgabe_1

./: README.md  load_data.py  power_curve.py  pyproject.toml  sort.py
