[project]
name = "programmieren_2_aufgabe_1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marc", email = "wm2041@mci4me.at"},
]
dependencies = ["numpy>=2.4.4", "matplotlib>=3.10.9"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
